Mac:Dont always enable findbar buttons when restoring focus with search string

Avoids enabling findbar buttons when there is no search match.

TEST=On mac: Search for something not in page, verify next/prev buttons
disabled due to no results, focus away from findbar, do ctrl-f and verify
buttons remain disabled.

BUG=634289

Review-Url: https://codereview.chromium.org/2928333002
Cr-Commit-Position: refs/heads/master@{#492002}