chrome/browser/ui/cocoa/find_bar/find_bar_cocoa_controller.mm
@@ -42,6 +42,7 @@ const float kFindBarCloseDuration = 0.15;
 const float kFindBarMoveDuration = 0.15;
 const float kRightEdgeOffset = 25;
 const int kMaxCharacters = 4000;
+const int kUndefinedResultCount = -1;
 
 @interface FindBarCocoaController (PrivateMethods) <NSAnimationDelegate>
 // Returns the appropriate frame for a hidden find bar.
@@ -76,6 +77,10 @@ const int kMaxCharacters = 4000;
 - (void)clearFindResultsForCurrentBrowser;
 
 - (BrowserWindowController*)browserWindowController;
+
+// Returns the number of matches from the last find results of the active
+// web contents. Returns kUndefinedResultCount if unable to determine the count.
+- (int)lastNumberOfMatchesForActiveWebContents;
 @end
 
 @implementation FindBarCocoaController
@@ -363,9 +368,8 @@ const int kMaxCharacters = 4000;
 
 - (void)setFocusAndSelection {
   [[findText_ window] makeFirstResponder:findText_];
+  BOOL buttonsEnabled = ([self lastNumberOfMatchesForActiveWebContents] != 0);
 
-  // Enable the buttons if the find text is non-empty.
-  BOOL buttonsEnabled = ([[findText_ stringValue] length] > 0) ? YES : NO;
   [previousButton_ setEnabled:buttonsEnabled];
   [nextButton_ setEnabled:buttonsEnabled];
 }
@@ -669,4 +673,13 @@ const int kMaxCharacters = 4000;
       browserWindowControllerForWindow:browser_->window()->GetNativeWindow()];
 }
 
+- (int)lastNumberOfMatchesForActiveWebContents {
+  if (!browser_)
+    return kUndefinedResultCount;
+
+  content::WebContents* contents =
+      findBarBridge_->GetFindBarController()->web_contents();
+  FindTabHelper* findTabHelper = FindTabHelper::FromWebContents(contents);
+  return findTabHelper->find_result().number_of_matches();
+}
 @end
